<resources>
    <string name="app_name">折扣猎手</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">添加</string>
    <string name="action_setting">设置</string>
    <string name="item_home">主页</string>
    <string name="item_recommend">猎手推荐</string>
    <string name="item_hot">实时热卖</string>
    <string name="str_search">搜索</string>
    <string name="search_history">历史搜索：</string>
    <string name="clear_search_history">清空</string>
    <string name="about">关于</string>
    <string name="flash">手电筒</string>
    <string name="clock">时钟</string>
    <string name="clear_cache">清理缓存</string>
    <string name="my_code">扫我下载</string>
    <string name="my_collection">我的收藏</string>
    <string name="login">授权登录</string>
    <string name="scan">扫一扫</string>
    <string name="share">分享给朋友</string>
    <string name="collection_describe">以下是收藏列表,长按删除</string>
    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!--按钮-->
    <string name="buy">去下单</string>
    <string name="quan">去领券</string>
    <string name="collection">收藏</string>
    <string name="collection_none">暂无收藏</string>
    <string name="unusable">已失效</string>
    <string name="feedback_hint">请输入您的宝贵意见或建议</string>
    <string name="to_top">↑</string>
    <string name="to_bottom">↓</string>
    <string name="welcome">折扣猎手,值得拥有</string>
    <string name="loading">Loading...</string>

</resources>
