<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:id="@+id/iv_goods_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_goods_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="标题"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_goods_detail" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_transparent"
            app:layout_constraintTop_toBottomOf="@+id/tv_goods_detail_title" />

        <TextView
            android:id="@+id/tv_goods_detail_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/divider_1" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey_transparent"
            app:layout_constraintTop_toBottomOf="@+id/tv_goods_detail_reason" />


        <TextView
            android:id="@+id/tv_goods_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="14"
            android:textColor="@color/price_color"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_goods_detail_quan"
            app:layout_constraintRight_toLeftOf="@+id/btn_goods_detail_quan" />

        <Button
            android:id="@+id/btn_goods_detail_quan"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_buy"
            android:text="@string/quan"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_goods_detail_buy"
            app:layout_constraintRight_toLeftOf="@+id/btn_goods_detail_buy" />

        <Button
            android:id="@+id/btn_goods_detail_buy"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_buy"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_goods_detail_collection"
            app:layout_constraintRight_toLeftOf="@+id/btn_goods_detail_collection" />

        <Button
            android:id="@+id/btn_goods_detail_collection"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_buy"
            android:text="@string/collection"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_2" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>